--- a/manifests/knative/0.9/serving.yaml
+++ b/manifests/knative/0.9/serving.yaml
@@ -1077,7 +1077,7 @@ data:
 
     # List of repositories for which tag to digest resolving should be skipped
     registriesSkippingTagResolving: "ko.local,dev.local"
-  queueSidecarImage: gcr.io/knative-releases/knative.dev/serving/cmd/queue@sha256:9ee46b5f0bd5d3a3dc7af319dafb79e88e18092bd1af6ff835b762fc12ba642a
+  queueSidecarImage: jimmysong/knative-serving-cmd-queue:0.9
 kind: ConfigMap
 metadata:
   labels:
